--- a/net/tsi/Makefile
+++ b/net/tsi/Makefile
@@ -1,4 +1,7 @@
 # SPDX-License-Identifier: GPL-2.0-only
+EXTRA_CFLAGS += -DDEBUG
+CFLAGS_af_tsi.o := -DDEBUG
+
 obj-$(CONFIG_TSI) += tsi.o
 
 tsi-y := af_tsi.o
